--- a/android/.gitignore
+++ b/android/.gitignore
@@ -6,6 +6,7 @@ gradle-wrapper.jar
 /local.properties
 GeneratedPluginRegistrant.java
 /android/app/src/main/AndroidManifest.xml
+AndroidManifest.xml
 # Remember to never publicly share your keystore.
 # See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
 key.properties
